MOBI-7 - move html{ height: auto } to base for all themes - set box-sizing on pagePanel-body to avoid border overflow
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@34903 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/resources/themes/base/0_base.css
+++ b/resources/themes/base/0_base.css
@@ -13,7 +13,9 @@
  * express or implied. See the License for the specific language
  * governing permissions and limitations under the License.
  */
- 
+html {
+  height:auto !important; /* fix issue with body background images */
+}
 body{ 
     font-family: Helvetica, Arial, sans-serif;
     margin: 0;
